# backend

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  operations.py  operationsclass.py  pyproject.toml  requirements.txt  server.py  setup.cfg  user.py
.github/workflows/: docker-publish.yml
easymoney/: __main__.py  config.py  db.py  errors.py  models.py  operations.py  schemas.py  server.py
easymoney/operations/: add_operation.py  models.py  storage.py  total.py  view.py
easymoney/user/: delete_user.py  storage.py  view.py
easymoney/user/db/: models.py  update_user.py
operations/: db.py  delete_operation.py  get_operation.py  update_operation.py
user/db/: add_user.py  db.py  get_user.py
